# NobleCore

./: .gitignore  Address.cpp  Address.h  CMakeLists.txt  Frame.cpp  Frame.h  List.h  Memory.h  NobleCore.h  NobleCoreDoxyConfig  NobleCoreTests.cpp  Op.cpp  Op.h  PlatformMacros.h  README.md  Translation.cpp  Translation.h  Value.cpp  Value.h
.github/workflows/: BuildDocs  BuildDocs.yml  Tests.yml  codeql.yml
Docs/: NobleCoreDocs
NobleCoreTests/: FrameTests.cpp  ListTests.cpp  TranslationTests.cpp  ValueTests.cpp
docs/: doxygen.css  index.html  navtreedata.js
